refactor: critical 수정