@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -37,7 +36,7 @@ public class ProductService {
         
         return products.stream()
                 .map(ProductResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ProductDetailResponse findProductDetail(Long id) {
